make config screen locale independent